--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
     <title>説明</title>
 </head>
 <body>
-    <h4>Home:家。</h4>
-    <h4>カオス:最初に作ったサイト。</h4>
-    <h4>便利:便利。</h4>
-    <h4>目潰し:ポリゴンショック。</h4>
-    <h4>目潰し2:目潰しより強い。</h4>
-    <h4>朝鮮テトリス:北朝鮮のテトリス、削除。</h4>
-    <h4>ウイルス:クリックするとウェブサイトが無限に開く。</h4>
-    <h4>強化ウイルス:ウイルスより強い、何があっても自己責任。</h4>
-    <h4>動画:youtubeの動画の曲、パスワードがある。</h4>
-    <h4>新テトリス:普通のテトリス、たまにバグがある。</h4>
-    <h4>新新テトリス:普通のテトリス、バグが無くなったはず。</h4>
-    <h4>ブロック崩し:赤いブロック崩し残機が６でむずい。</h4>
-    <h4>ストップウォッチ:普通のストップウォッチ、コピペ。</h4>
-    <h4>カメラ:カメラっぽい何か。</h4>
-    <h4>更新履歴:Homeの更新履歴。</h4>
-    <h4>説明:ここ。</h4>
+    <h5>最終更新履歴:2023/05/16</h5>
+    <h5>Home:家。</h5>
+    <h5>カオス:最初に作ったサイト。</h5>
+    <h5>便利:便利。</h5>
+    <h5>目潰し:ポリゴンショック。</h5>
+    <h5>目潰し2:目潰しより強い。</h5>
+    <h5>目潰し3:原点にして頂点。</h5>
+    <h5>目潰し類:目に何らかの障害が起きたとしても自己責任。</h5>
+    <h5>朝鮮テトリス:北朝鮮のテトリス、削除。</h5>
+    <h5>ウイルス:クリックするとウェブサイトが無限に開く。</h5>
+    <h5>強化ウイルス:ウイルスより強い、何があっても自己責任。</h5>
+    <h5>動画:youtubeの動画の曲、パスワードがある。</h5>
+    <h5>新テトリス:普通のテトリス、たまにバグがある。</h5>
+    <h5>新新テトリス:普通のテトリス、バグが無くなったはず。</h5>
+    <h5>ブロック崩し:赤いブロック崩し残機が６でむずい。</h5>
+    <h5>ストップウォッチ:普通のストップウォッチ、コピペ。</h5>
+    <h5>カメラ:カメラっぽい何か。</h5>
+    <h5>更新履歴:Homeの更新履歴。</h5>
+    <h5>説明:ここ。</h5>
+    <h5>作者:作者の名字を入力しないと見れない、本末転倒。</h5>
 </body>
 </html>
