--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <h6>ブロック崩し:赤いブロック崩し残機が６でむずい。</h6>
     <h6>ストップウォッチ:普通のストップウォッチ、コピペ。</h6>
     <h6>カメラ:カメラっぽい何か。</h6>
+    <h6>死:死にたい。</h6>
     <h6>更新履歴:Homeの更新履歴。</h6>
     <h6>説明:ここ。</h6>
     <h6>作者:作者の名字を入力しないと見れない、本末転倒。</h6>
