--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="favicon.ico">
-    <meta charset="UTF-8" />
-    <title>説明</title>
+<link rel="icon" href="favicon.ico">
+<meta charset="UTF-8" />
+<title>説明</title>
 </head>
-<body>
-    <h6>最終更新履歴:2023/05/16</h6>
-    <h6>Home:家。</h6>
-    <h6>カオス:最初に作ったサイト。</h6>
-    <h6>便利:便利。</h6>
-    <h6>目潰し:ポリゴンショック。</h6>
-    <h6>目潰し2:目潰しより強い。</h6>
-    <h6>目潰し3:原点にして頂点。</h6>
-    <h6>目潰し類:目に何らかの障害が起きたとしても自己責任。</h6>
-    <h6>朝鮮テトリス:北朝鮮のテトリス、削除。</h6>
-    <h6>ウイルス:クリックするとウェブサイトが無限に開く。</h6>
-    <h6>強化ウイルス:ウイルスより強い、何があっても自己責任。</h6>
-    <h6>動画:youtubeの動画の曲、パスワードがある。</h6>
-    <h6>新テトリス:普通のテトリス、たまにバグがある。</h6>
-    <h6>新新テトリス:普通のテトリス、バグが無くなったはず。</h6>
-    <h6>ブロック崩し:赤いブロック崩し残機が６でむずい。</h6>
-    <h6>ストップウォッチ:普通のストップウォッチ、コピペ。</h6>
-    <h6>カメラ:カメラっぽい何か。</h6>
-    <h6>死:死にたい。</h6>
-    <h6>設定画面:背景やタイトルを変更できる画面を表示したり。</h6>
-    <h6>更新履歴:Homeの更新履歴。</h6>
-    <h6>説明:ここ。</h6>
-    <h6>作者:作者の名字を入力しないと見れない、本末転倒。</h6>
+<body><h5>
+最終更新履歴:2023/05/16</h5>
+Home:家。
+カオス:最初に作ったサイト。
+便利:便利。
+目潰し:ポリゴンショック。
+目潰し2:目潰しより強い。
+目潰し3:原点にして頂点。
+目潰し類:目に何らかの障害が起きたとしても自己責任。
+朝鮮テトリス:北朝鮮のテトリス、削除。
+ウイルス:クリックするとウェブサイトが無限に開く。
+強化ウイルス:ウイルスより強い、何があっても自己責任。
+動画:youtubeの動画の曲、パスワードがある。
+新テトリス:普通のテトリス、たまにバグがある。
+新新テトリス:普通のテトリス、バグが無くなったはず。
+ブロック崩し:赤いブロック崩し残機が６でむずい。
+ストップウォッチ:普通のストップウォッチ、コピペ。
+カメラ:カメラっぽい何か。
+死にたい:死にたいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいいい。
+素数ジェネレーター:指定した数までの素数を表示する。
+素数ジェネレーター2:指定した数に一番近い素数を表示する。
+素数判定:指定した数が素数か判定する。
+偶数ジェネレーター:指定した数までの偶数を表示する。
+奇数ジェネレーター:指定した数までの奇数を表示する。
+二の累乗ジェネレーター:指定した数二の累乗を表示する。
+２進数ジェネレーター:画面全体に２進数を表示する。
+テトレーション:テトレーション計算ができる。
+設定画面:背景やタイトルを変更できる画面を表示したり。
+更新履歴:Homeの更新履歴。
+説明:ここ。
+作者:作者の名字を入力しないと見れない、本末転倒。
+</h5>
 </body>
 </html>
