--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <h5>目潰し2:目潰しより強い。</h5>
 <h5>目潰し3:原点にして頂点。</h5>
 <h5>目潰し類:目に何らかの障害が起きたとしても自己責任。</h5>
-朝鮮テトリス:北朝鮮のテトリス、削除。</h5>
+<h5>朝鮮テトリス:北朝鮮のテトリス、削除。</h5>
 <h5>ウイルス:クリックするとウェブサイトが無限に開く。</h5>
 <h5>強化ウイルス:ウイルスより強い、何があっても自己責任。</h5>
 <h5>動画:youtubeの動画の曲、パスワードがある。</h5>
-新テトリス:普通のテトリス、たまにバグがある。</h5>
+<h5>新テトリス:普通のテトリス、たまにバグがある。</h5>
 <h5>新新テトリス:普通のテトリス、バグが無くなったはず。</h5>
 <h5>ブロック崩し:赤いブロック崩し残機が６でむずい。</h5>
 <h5>ストップウォッチ:普通のストップウォッチ、コピペ。</h5>
@@ -27,11 +27,13 @@
 <h5>素数ジェネレーター:指定した数までの素数を表示する。</h5>
 <h5>素数ジェネレーター2:指定した数に一番近い素数を表示する。</h5>
 <h5>素数判定:指定した数が素数か判定する。</h5>
-偶数ジェネレーター:指定した数までの偶数を表示する。</h5>
+<h5>偶数ジェネレーター:指定した数までの偶数を表示する。</h5>
 <h5>奇数ジェネレーター:指定した数までの奇数を表示する。</h5>
 <h5>二の累乗ジェネレーター:指定した数二の累乗を表示する。</h5>
 <h5>２進数ジェネレーター:画面全体に２進数を表示する。</h5>
-<h5>テトレーション:テトレーション計算ができる。</h5>
+<h5>テトレーション:テトレーション計算ができる。削除</h5>
+<h5>自然数ジェネレーター:指定した数までの自然数を表示する。</h5>
+<h5>円周率ジェネレーター:永遠に円周率を表示する。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示したり。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
 <h5>説明:ここ。</h5>
