--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/05/25</h5>
+<h5>最終更新履歴:2023/05/27</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -34,7 +34,13 @@
 <h5>テトレーション:テトレーション計算ができる。削除</h5>
 <h5>自然数ジェネレーター:指定した数までの自然数を表示する。</h5>
 <h5>円周率ジェネレーター:永遠に円周率を表示する。</h5>
-<h5>設定画面:背景やタイトルを変更できる画面を表示したり。</h5>
+<h5>乱数ジェネレーター:指定した数から指定した数までの乱数を表示する。</h5>
+<h5>文字カウント:入力した文字を数える。</h5>
+<h5>ああああああああああああああああああああああああああああああああああ:ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</h5>
+<h5>game:前スクラッチで作ったゲーム。</h5>
+<h5>game2:前スクラッチで作ったゲーム。</h5>
+<h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
+<h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
 <h5>説明:ここ。</h5>
 <h5>作者:作者の名字を入力しないと見れない、本末転倒。</h5>
