--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <h5>自然数ジェネレーター:指定した数までの自然数を表示する。</h5>
 <h5>円周率ジェネレーター:永遠に円周率を表示する。</h5>
 <h5>乱数ジェネレーター:指定した数から指定した数までの乱数を表示する。</h5>
+<h5>テトレーション計算機:一回作って消されてbing AIの力によって復活したテトレーション計算機。</h5>
 <h5>文字カウント:入力した文字を数える。</h5>
 <h5>ああああああああああああああああああああああああああああああああああ:ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</h5>
 <h5>game:前スクラッチで作ったゲーム。</h5>
