--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/05/27</h5>
+<h5>最終更新履歴:2023/05/28</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -18,8 +18,8 @@
 <h5>ウイルス:クリックするとウェブサイトが無限に開く。</h5>
 <h5>強化ウイルス:ウイルスより強い、何があっても自己責任。</h5>
 <h5>動画:youtubeの動画の曲、パスワードがある。</h5>
-<h5>新テトリス:普通のテトリス、たまにバグがある。</h5>
-<h5>新新テトリス:普通のテトリス、バグが無くなったはず。</h5>
+<h5>テトリス:普通のテトリス、たまにバグがある。</h5>
+<h5>新テトリス:普通のテトリス、バグが治った。</h5>
 <h5>ブロック崩し:赤いブロック崩し残機が６でむずい。</h5>
 <h5>ストップウォッチ:普通のストップウォッチ、コピペ。</h5>
 <h5>カメラ:カメラっぽい何か。</h5>
@@ -42,8 +42,10 @@
 <h5>game2:前スクラッチで作ったゲーム。</h5>
 <h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
+<h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
 <h5>説明:ここ。</h5>
 <h5>作者:作者の名字を入力しないと見れない、本末転倒。</h5>
+<h5>このサイトについて:Homeの説明。</h5>
 </body>
 </html>
