--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="google-site-verification" content="dIEMkwV-BDKDuUEecs7R_AE4s1bbXdTniZ7so3HQJwA" />
 <link rel="icon" href="favicon.ico">
 <meta charset="UTF-8" />
 <title>説明</title>
