--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
 <h5>スロット:スクラッチのスロットゲームを改良したやつ。</h5>
 <h5>自動スロット:スクラッチのスロットゲームを全自動にしたやつ。</h5>
+<h5>完全全自動スロット:スクラッチのスロットゲームを完全全自動にしたやつ。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
