--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/05/</h5>
+<h5>最終更新履歴:2023/05/30</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -43,6 +43,7 @@
 <h5>スロット:スクラッチのスロットゲームを改良したやつ。</h5>
 <h5>自動スロット:スクラッチのスロットゲームを全自動にしたやつ。</h5>
 <h5>完全全自動スロット:スクラッチのスロットゲームを完全全自動にしたやつ。</h5>
+<h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
