--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h5>朝鮮テトリス:北朝鮮のテトリス、削除。</h5>
 <h5>ウイルス:クリックするとウェブサイトが無限に開く。</h5>
 <h5>強化ウイルス:ウイルスより強い、何があっても自己責任。</h5>
-<h5>動画:youtubeの動画の曲、パスワードがある。</h5>
+<h5>動画:youtubeの動画の曲、パスワードがない。</h5>
 <h5>テトリス:普通のテトリス、たまにバグがある。</h5>
 <h5>新テトリス:普通のテトリス、バグが治った。</h5>
 <h5>ブロック崩し:赤いブロック崩し残機が６でむずい。</h5>
@@ -48,7 +48,7 @@
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
 <h5>説明:ここ。</h5>
-<h5>作者:作者の名字を入力しないと見れない、本末転倒。</h5>
+<h5>作者:パスワードがある。</h5>
 <h5>このサイトについて:Homeの説明。</h5>
 </body>
 </html>
