--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 <h5>スロット:スクラッチのスロットゲームを改良したやつ。</h5>
 <h5>自動スロット:スクラッチのスロットゲームを全自動にしたやつ。</h5>
 <h5>完全全自動スロット:スクラッチのスロットゲームを完全全自動にしたやつ。</h5>
+<h5>鬼畜アスレ:削除。</5>
+<h5>異次元鬼畜アスレ:削除。</5>
+<h5>ヘビゲーム:ほぼコピペ。</5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
@@ -50,5 +53,6 @@
 <h5>説明:ここ。</h5>
 <h5>作者:パスワードがある。</h5>
 <h5>このサイトについて:Homeの説明。</h5>
+<h5>ボタン開閉:ボタンを表示したり非表示にしたるする。</h5>
 </body>
 </html>
