--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/05/30</h5>
+<h5>最終更新履歴:2023/06/05</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -39,6 +39,7 @@
 <h5>文字カウント:入力した文字を数える。</h5>
 <h5>game:前スクラッチで作ったゲーム。</h5>
 <h5>game2:前スクラッチで作ったゲーム。</h5>
+<h5>game3:前スクラッチで作ったゲームを進化や改良したやつ。</h5>
 <h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
 <h5>スロット:スクラッチのスロットゲームを改良したやつ。</h5>
 <h5>自動スロット:スクラッチのスロットゲームを全自動にしたやつ。</h5>
@@ -46,6 +47,7 @@
 <h5>鬼畜アスレ:削除。</5>
 <h5>異次元鬼畜アスレ:削除。</5>
 <h5>ヘビゲーム:ほぼコピペ。</5>
+<h5>WEB:Hubspotで作った意味のないサイト。</5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
