--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <h5>乱数ジェネレーター:指定した数から指定した数までの乱数を表示する。</h5>
 <h5>テトレーション計算機:一回作って消されてbing AIの力によって復活したテトレーション計算機。</h5>
 <h5>文字カウント:入力した文字を数える。</h5>
-<h5>game:前スクラッチで作ったゲーム。</h5>
+<h5>game:前スクラッチで作ったゲーム。削除</h5>
 <h5>game2:前スクラッチで作ったゲーム。</h5>
 <h5>game3:前スクラッチで作ったゲームを進化や改良したやつ。</h5>
 <h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
@@ -48,7 +48,8 @@
 <h5>異次元鬼畜アスレ:削除。</5>
 <h5>ヘビゲーム:ほぼコピペ。</5>
 <h5>WEB:Hubspotで作った意味のないサイト。</5>
-<h5>I don't want you no more.:I don't want you no more.</h5>
+<h5>I don't want you no more.:I don't want you no more.削除</h5>
+<h5>動画見る:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
