--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 <h5>WEB:Hubspotで作った意味のないサイト。</5>
 <h5>I don't want you no more.:I don't want you no more.削除</h5>
 <h5>動画見る:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
+<h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
+<h5>画像を選択:背景画像を選べる。</h5>
 <h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
 <h5>更新履歴:Homeの更新履歴。</h5>
 <h5>説明:ここ。</h5>
