--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h5>ヘビゲーム:ほぼコピペ。</5>
 <h5>WEB:Hubspotで作った意味のないサイト。</5>
 <h5>I don't want you no more.:I don't want you no more.削除</h5>
-<h5>動画見る:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
+<h5>youtube:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
