--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/06/08</h5>
+<h5>最終更新履歴:2023/06/10</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -47,10 +47,13 @@
 <h5>鬼畜アスレ:削除。</5>
 <h5>異次元鬼畜アスレ:削除。</5>
 <h5>ヘビゲーム:ほぼコピペ。</5>
+<h5>マインスイーパー:マインスイーパー。</5>
 <h5>WEB:Hubspotで作った意味のないサイト。</5>
 <h5>I don't want you no more.:I don't want you no more.削除</h5>
 <h5>youtube:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
 <h5>niconico:niconicoのリンクを入力して置き換えを押すとniconicoの動画が表示される。</h5>
+<h5>検索ツール:bingやgoogleで検索できる。</5>
+<h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
