--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <h5>異次元鬼畜アスレ:削除。</5>
 <h5>ヘビゲーム:ほぼコピペ。</5>
 <h5>マインスイーパー:マインスイーパー。</5>
+<h5>カオスマインスイーパー:マインスイーパーをカオスにしたやつ意見から来た。</5>
 <h5>WEB:Hubspotで作った意味のないサイト。</5>
 <h5>I don't want you no more.:I don't want you no more.削除</h5>
 <h5>youtube:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
