--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <h5>niconico:niconicoのリンクを入力して置き換えを押すとniconicoの動画が表示される。</h5>
 <h5>検索ツール:bingやgoogleで検索できる。</5>
 <h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
+<h5>意見:homeの感想や意見を送る場所。</5>
+<h5>神サイト:フィルター回避神すぎる。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
