--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/06/10</h5>
+<h5>最終更新履歴:2023/06/12</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -56,7 +56,7 @@
 <h5>検索ツール:bingやgoogleで検索できる。</5>
 <h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
 <h5>意見:homeの感想や意見を送る場所。</5>
-<h5>神サイト:フィルター回避神すぎる。</5>
+<h5>何もない場所:なにかあるかもヒントはURL。</5>
 <h5>メモ帳:めっちゃ書けるメモ帳。</5>
 <h5>削除:過去に削除された者たち。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
