--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 <h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
 <h5>意見:homeの感想や意見を送る場所。</5>
 <h5>何もない場所:なにかあるかもヒントはURL。</5>
-<h5>メモ帳:めっちゃ書けるメモ帳。</5>
+<h5>大メモ帳:大きい書けるメモ帳。</5>
+<h5>中メモ帳:中ぐらいの書けるメモ帳。</5>
+<h5>小メモ帳:小さい書けるメモ帳。</5>
 <h5>削除:過去に削除された者たち。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
