--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
 <h5>意見:homeの感想や意見を送る場所。</5>
 <h5>何もない場所:なにかあるかもヒントはURL。</5>
+<h5>何もない場所の説明:何もない場所の説明。</5>
 <h5>大メモ帳:大きい書けるメモ帳。</5>
 <h5>中メモ帳:中ぐらいの書けるメモ帳。</5>
 <h5>小メモ帳:小さい書けるメモ帳。</5>
