--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>説明</title>
 </head>
 <body>
-<h5>最終更新履歴:2023/06/14</h5>
+<h5>最終更新履歴:2023/06/15</h5>
 <h5>Home:家。</h5>
 <h5>カオス:最初に作ったサイト。</h5>
 <h5>便利:便利。</h5>
@@ -63,6 +63,7 @@
 <h5>小メモ帳:小さい書けるメモ帳。</5>
 <h5>過去に削除された作品:過去に削除された者たち。</5>
 <h5>雑談:意見から来た、作るの難しかった。</5>
+<h5>激むずタイピング:作った。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
