--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 <h5>過去に削除された作品:過去に削除された者たち。</5>
 <h5>雑談:意見から来た、作るの難しかった。</5>
 <h5>激むずタイピング:作った。</5>
+<h5>お知らせ:制作者から。</5>
+<h5>軽量化Home:まあまあ軽くなってる。</5>
+<h5>隠しURL:音楽とか。</5>
+<h5>階乗:階乗計算機。</5>
+<h5>累乗:累乗計算機、意見から来た。</5>
+<h5>超階乗:超階乗計算機。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
