--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 <h5>軽量化Home:まあまあ軽くなってる。</5>
 <h5>隠しURL:音楽とか。</5>
 <h5>階乗:階乗計算機。</5>
-<h5>累乗:累乗計算機、意見から来た。</5>
 <h5>超階乗:超階乗計算機。</5>
+<h5>累乗:累乗計算機、意見から来た。</5>
+<h5>神階乗:超大革命。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
