--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
 <h5>階乗:階乗計算機。</5>
 <h5>超階乗:超階乗計算機。</5>
 <h5>累乗:累乗計算機、意見から来た。</5>
-<h5>神階乗:超大革命。</5>
+<h5>神階乗:計算制限なくなったのは革命。</5>
+<h5>神累乗:計算制限なくなった累乗。</5>
+<h5>python:htmlでpythonを実行できる。</5>
+<h5>ハゲ:ハゲ。</5>
 <h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
 <h5>全画面切り替え:全画面切り替えできるボタン。</h5>
 <h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
