--- a/index.html
+++ b/index.html
@@ -5,86 +5,86 @@
 <meta charset="UTF-8" />
 <title>説明</title>
 </head>
-<body>
-<h5>最終更新履歴:2023/06/25</h5>
-<h5>Home:家。</h5>
-<h5>カオス:最初に作ったサイト。</h5>
-<h5>便利:便利。</h5>
-<h5>目潰し:ポリゴンショック。</h5>
-<h5>目潰し2:目潰しより強い。</h5>
-<h5>目潰し3:原点にして頂点。</h5>
-<h5>目潰し類:目に何らかの障害が起きたとしても自己責任。</h5>
-<h5>朝鮮テトリス:北朝鮮のテトリス、削除。</h5>
-<h5>ウイルス:クリックするとウェブサイトが無限に開く。</h5>
-<h5>強化ウイルス:ウイルスより強い、何があっても自己責任。</h5>
-<h5>動画:youtubeの動画の曲、パスワードがない。</h5>
-<h5>テトリス:普通のテトリス、たまにバグがある。</h5>
-<h5>新テトリス:普通のテトリス、バグが治った。</h5>
-<h5>ブロック崩し:赤いブロック崩し残機が６でむずい。</h5>
-<h5>ストップウォッチ:普通のストップウォッチ、コピペ。</h5>
-<h5>カメラ:カメラっぽい何か。</h5>
-<h5>素数ジェネレーター:指定した数までの素数を表示する。</h5>
-<h5>素数ジェネレーター2:指定した数に一番近い素数を表示する。</h5>
-<h5>素数判定:指定した数が素数か判定する。</h5>
-<h5>偶数ジェネレーター:指定した数までの偶数を表示する。</h5>
-<h5>奇数ジェネレーター:指定した数までの奇数を表示する。</h5>
-<h5>二の累乗ジェネレーター:指定した数二の累乗を表示する。</h5>
-<h5>２進数ジェネレーター:画面全体に２進数を表示する。</h5>
-<h5>テトレーション:テトレーション計算ができる。削除</h5>
-<h5>自然数ジェネレーター:指定した数までの自然数を表示する。</h5>
-<h5>円周率ジェネレーター:永遠に円周率を表示する。</h5>
-<h5>乱数ジェネレーター:指定した数から指定した数までの乱数を表示する。</h5>
-<h5>テトレーション計算機:一回作って消されてbing AIの力によって復活したテトレーション計算機。</h5>
-<h5>文字カウント:入力した文字を数える。</h5>
-<h5>game:前スクラッチで作ったゲーム。削除</h5>
-<h5>game2:前スクラッチで作ったゲーム。</h5>
-<h5>game3:前スクラッチで作ったゲームを進化や改良したやつ。</h5>
-<h5>チートスロット:スクラッチのスロットゲームを改造したやつ。</h5>
-<h5>スロット:スクラッチのスロットゲームを改良したやつ。</h5>
-<h5>自動スロット:スクラッチのスロットゲームを全自動にしたやつ。</h5>
-<h5>完全全自動スロット:スクラッチのスロットゲームを完全全自動にしたやつ。</h5>
-<h5>鬼畜アスレ:削除。</5>
-<h5>異次元鬼畜アスレ:削除。</5>
-<h5>ヘビゲーム:ほぼコピペ。</5>
-<h5>マインスイーパー:マインスイーパー。</5>
-<h5>カオスマインスイーパー:マインスイーパーをカオスにしたやつ意見から来た。</5>
-<h5>WEB:Hubspotで作った意味のないサイト。</5>
-<h5>I don't want you no more.:I don't want you no more.削除</h5>
-<h5>youtube:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。</h5>
-<h5>niconico:niconicoのリンクを入力して置き換えを押すとniconicoの動画が表示される。</h5>
-<h5>検索ツール:bingやgoogleで検索できる。削除</5>
-<h5>意見回答:WEBの意見から送られた意見に対する回答。</5>
-<h5>意見:homeの感想や意見を送る場所。</5>
-<h5>神サイト:なにかあるかもヒントはURL。</5>
-<h5>神サイトの説明:何もない場所の説明。</5>
-<h5>大メモ帳:大きい書けるメモ帳。</5>
-<h5>中メモ帳:中ぐらいの書けるメモ帳。</5>
-<h5>小メモ帳:小さい書けるメモ帳。</5>
-<h5>過去に削除された作品:過去に削除された者たち。</5>
-<h5>雑談:意見から来た、作るの難しかった。</5>
-<h5>激むずタイピング:作った。</5>
-<h5>お知らせ:制作者から。</5>
-<h5>軽量化Home:まあまあ軽くなってる。</5>
-<h5>隠しURL:音楽とか。</5>
-<h5>階乗:階乗計算機。</5>
-<h5>超階乗:超階乗計算機。</5>
-<h5>累乗:累乗計算機、意見から来た。</5>
-<h5>神階乗:計算制限なくなったのは革命。</5>
-<h5>神累乗:計算制限なくなった累乗。</5>
-<h5>python:htmlでpythonを実行できる。</5>
-<h5>ハゲ:ハゲの歌を主題にして作った。</5>
-<h5>全サイト:大体全部ある。</5>
-<h5>話す:雑談・意見・意見回答。</5>
-<h5>ゲーム:ゲーム集。</5>
-<h5>ショートカット:色々なショートカットがある画面を表示する。</h5>
-<h5>全画面切り替え:全画面切り替えできるボタン。</h5>
-<h5>設定画面:背景やタイトルを変更できる画面を表示する。</h5>
-<h5>画像を選択:背景画像を選べる。</h5>
-<h5>数学系統:数学に関係するウェブサイトに行けるボタンを表示する。</h5>
-<h5>更新履歴:Homeの更新履歴。</h5>
-<h5>説明:ここ。</h5>
-<h5>作者:パスワードがある。</h5>
-<h5>このサイトについて:Homeの説明。</h5>
-<h5>ボタン開閉:ボタンを表示したり非表示にしたるする。</h5>
+<body><h5>
+最終更新履歴:2023/06/25<br>
+Home:家。<br>
+カオス:最初に作ったサイト。<br>
+便利:便利。<br>
+目潰し:ポリゴンショック。<br>
+目潰し2:目潰しより強い。<br>
+目潰し3:原点にして頂点。<br>
+目潰し類:目に何らかの障害が起きたとしても自己責任。<br>
+朝鮮テトリス:北朝鮮のテトリス、削除。<br>
+ウイルス:クリックするとウェブサイトが無限に開く。<br>
+強化ウイルス:ウイルスより強い、何があっても自己責任。<br>
+動画:youtubeの動画の曲、パスワードがない。<br>
+テトリス:普通のテトリス、たまにバグがある。<br>
+新テトリス:普通のテトリス、バグが治った。<br>
+ブロック崩し:赤いブロック崩し残機が６でむずい。<br>
+ストップウォッチ:普通のストップウォッチ、コピペ。<br>
+カメラ:カメラっぽい何か。<br>
+素数ジェネレーター:指定した数までの素数を表示する。<br>
+素数ジェネレーター2:指定した数に一番近い素数を表示する。<br>
+素数判定:指定した数が素数か判定する。<br>
+偶数ジェネレーター:指定した数までの偶数を表示する。<br>
+奇数ジェネレーター:指定した数までの奇数を表示する。<br>
+二の累乗ジェネレーター:指定した数二の累乗を表示する。<br>
+２進数ジェネレーター:画面全体に２進数を表示する。<br>
+テトレーション:テトレーション計算ができる。削除<br>
+自然数ジェネレーター:指定した数までの自然数を表示する。<br>
+円周率ジェネレーター:永遠に円周率を表示する。<br>
+乱数ジェネレーター:指定した数から指定した数までの乱数を表示する。<br>
+テトレーション計算機:一回作って消されてbing AIの力によって復活したテトレーション計算機。<br>
+文字カウント:入力した文字を数える。<br>
+game:前スクラッチで作ったゲーム。削除<br>
+game2:前スクラッチで作ったゲーム。<br>
+game3:前スクラッチで作ったゲームを進化や改良したやつ。<br>
+チートスロット:スクラッチのスロットゲームを改造したやつ。<br>
+スロット:スクラッチのスロットゲームを改良したやつ。<br>
+自動スロット:スクラッチのスロットゲームを全自動にしたやつ。<br>
+完全全自動スロット:スクラッチのスロットゲームを完全全自動にしたやつ。<br>
+鬼畜アスレ:削除。<br>
+異次元鬼畜アスレ:削除。<br>
+ヘビゲーム:ほぼコピペ。<br>
+マインスイーパー:マインスイーパー。<br>
+カオスマインスイーパー:マインスイーパーをカオスにしたやつ意見から来た。<br>
+WEB:Hubspotで作った意味のないサイト。<br>
+I don't want you no more.:I don't want you no more.削除<br>
+youtube:youtubeのリンクを入力して置き換えを押すとyoutubeの動画が表示される。<br>
+niconico:niconicoのリンクを入力して置き換えを押すとniconicoの動画が表示される。<br>
+検索ツール:bingやgoogleで検索できる。削除。<br>
+意見回答:WEBの意見から送られた意見に対する回答。<br>
+意見:homeの感想や意見を送る場所。<br>
+神サイト:なにかあるかもヒントはURL。<br>
+神サイトの説明:何もない場所の説明。<br>
+大メモ帳:大きい書けるメモ帳。<br>
+中メモ帳:中ぐらいの書けるメモ帳。<br>
+小メモ帳:小さい書けるメモ帳。<br>
+過去に削除された作品:過去に削除された者たち。<br>
+雑談:意見から来た、作るの難しかった。<br>
+激むずタイピング:作った。<br>
+お知らせ:制作者から。<br>
+軽量化Home:まあまあ軽くなってる。<br>
+隠しURL:音楽とか。<br>
+階乗:階乗計算機。<br>
+超階乗:超階乗計算機。<br>
+累乗:累乗計算機、意見から来た。<br>
+階乗 ver.2:計算制限なくなったのは革命。<br>
+累乗 ver.2:計算制限なくなった累乗。<br>
+python:htmlでpythonを実行できる。<br>
+ハゲ:ハゲの歌を主題にして作った。<br>
+全サイト:大体全部ある。<br>
+話す:雑談・意見・意見回答。<br>
+ゲーム:ゲーム集。<br>
+ショートカット:色々なショートカットがある画面を表示する。<br>
+全画面切り替え:全画面切り替えできるボタン。<br>
+設定画面:背景やタイトルを変更できる画面を表示する。<br>
+画像を選択:背景画像を選べる。<br>
+数学系統:数学に関係するウェブサイトに行けるボタンを表示する。<br>
+更新履歴:Homeの更新履歴。<br>
+説明:ここ。<br>
+作者:パスワードがある。<br>
+このサイトについて:Homeの説明。<br>
+ボタン開閉:ボタンを表示したり非表示にしたるする。<h5>
 </body>
 </html>
