--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ python:htmlでpythonを実行できる。<br>
 履歴なしgoogle:検索だけでサイトはほぼ見れない。<br>
 履歴なしbing:googkeと同じ。<br>
 履歴削除:作れた。<br>
+Homeクイズ:クイズ。<br>
 話す:雑談・意見・意見回答。削除<br>
 ゲーム:ゲーム集。削除<br>
 ショートカット:色々なショートカットがある画面を表示する。<br>
