--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@ python:htmlでpythonを実行できる。<br>
 Homeクイズ:クイズ。<br>
 アニメ:元曲とかから。<br>
 ▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐:▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐<br>
+chromebook質問:chromebookについての質問。<br>
+chromebook回答:chromebook質問の回答。<br>
+dino:chrome://dino。<br>
+カレンダー:予定を入力できる。<br>
+便利Home:便利なサイトだけあるHome。<br>
+夢:自分か全人類の。<br>
 話す:雑談・意見・意見回答。削除<br>
 ゲーム:ゲーム集。削除<br>
 ショートカット:色々なショートカットがある画面を表示する。<br>
