--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ Homeクイズ:クイズ。<br>
 ▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐:▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐▐<br>
 緊急で動画を回しながら検討に検討を重ね今、検討が加速する！:緊急で動画を回しながら検討に検討を重ね今、検討が加速する！<br>
 √:ルート計算<br>
+名前認識システム:再読込しても名前が保存される。（cookie（cookieclickerではない）を許可しないとできない）<br>
+超究極完全体テトリス:完全体<br>
+保存できるメモ:再読込しても最後のメモが保存される。<br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
 dino:chrome://dino。<br>
