--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>説明</title>
 </head>
 <body><h3>
-最終更新履歴:2023/06/29<br>
+最終更新履歴:2023/08/06<br>
 Home:家。<br>
 カオス:最初に作ったサイト。<br>
 便利:便利。<br>
@@ -86,6 +86,8 @@ Homeクイズ:クイズ。<br>
 名前認識システム:再読込しても名前が保存される。（cookie（cookieclickerではない）を許可しないとできない）<br>
 超究極完全体テトリス:完全体<br>
 保存できるメモ:再読込しても最後のメモが保存される。<br>
+単位変換表:cookieclicker用<br>
+翻訳:google翻訳でいい気がする。<br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
 dino:chrome://dino。<br>
