--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>説明</title>
 </head>
 <body><h3>
-最終更新履歴:2023/08/06<br>
+最終更新履歴:2023/08/08<br>
 Home:家。<br>
 カオス:最初に作ったサイト。<br>
 便利:便利。<br>
@@ -93,7 +93,7 @@ chromebook回答:chromebook質問の回答。<br>
 dino:chrome://dino。<br>
 カレンダー:予定を入力できる。<br>
 便利Home:便利なサイトだけあるHome。<br>
-夢:自分か全人類の。<br>
+夢:できれば。<br>
 話す:雑談・意見・意見回答。削除<br>
 ゲーム:ゲーム集。削除<br>
 ショートカット:色々なショートカットがある画面を表示する。<br>
