--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@ Homeクイズ:クイズ。<br>
 保存できるメモ:再読込しても最後のメモが保存される。<br>
 単位変換表:cookieclicker用<br>
 翻訳:google翻訳でいい気がする。<br>
+英語版Home:google翻訳<br>
+Home集:Home<br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
 dino:chrome://dino。<br>
