--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@ Homeクイズ:クイズ。<br>
 翻訳:google翻訳でいい気がする。<br>
 英語版Home:google翻訳<br>
 Home集:Home<br>
+行配列ランダム化ツール:HBLUを作るために作られた便利サイト<br>
+文字列置換ツール:HBLUを作るために作られた便利サイト<br>
+文章'囲いツール:HBLUを作るために作られた便利サイト<br>
+文字列結合プログラム:HBLUを作るために作られた便利サイト<br>
+行削除ツール:HBLUを作るために作られた便利サイト<br>
+空白除去ツール:HBLUを作るために作られた便利サイト<br>
+文字重複検知ツール:HBLUを作るために作られた便利サイト<br>
+HBLU:自作言語<br>
+<br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
 dino:chrome://dino。<br>
@@ -104,7 +113,7 @@ dino:chrome://dino。<br>
 画像を選択:背景画像を選べる。<br>
 数学系統:数学に関係するウェブサイトに行けるボタンを表示する。<br>
 更新履歴:Homeの更新履歴。<br>
-説明:ここ。<br>
+説明:Homeにあるサイトの説明。<br>
 作者:パスワードがある。<br>
 このサイトについて:Homeの説明。<br>
 ボタン開閉:ボタンを表示したり非表示にしたるする。<br>
