--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@ Home集:Home<br>
 空白除去ツール:HBLUを作るために作られた便利サイト<br>
 文字重複検知ツール:HBLUを作るために作られた便利サイト<br>
 HBLU:自作言語<br>
+今:時間とか<br>
+web-html出力:便利<br>
+ファイル名変更プログラム:変更できる<br>
+異次元に軽いHome:Homeからしか開けない<br>
+軽いサイト:とにかく軽い<br>
+重いサイト:とにかく重い<br>
+blob版web-html出力:文字化けする<br>
+行カウント:文字カウントとほぼ同じ<br>
 <br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
