--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ web-html出力:便利<br>
 重いサイト:とにかく重い<br>
 blob版web-html出力:文字化けする<br>
 行カウント:文字カウントとほぼ同じ<br>
+Homeサイト検索:便利、空白の状態で検索を押すと登録されているすべてのサイトが表示される。<br>
 <br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
