--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@ web-html出力:便利<br>
 blob版web-html出力:文字化けする<br>
 行カウント:文字カウントとほぼ同じ<br>
 Homeサイト検索:便利、空白の状態で検索を押すと登録されているすべてのサイトが表示される。<br>
-隠しテトリス:Googleに見せかける。<br>
+隠しテトリス:Googleに見せかけたテトリス。<br>
+狂テトリス:イカれたテトリス<br>
+youtube var.2:youtube apiを使ったyoutube検索<br>
+youtubeチャンネル情報:youtube ver.2の次に使うと思っている<br>
+youtubeコメント取得:youtube ver.2でコメントを取得しようと思ったけど無理だった。<br>
+youtubeチャンネル検索:多分そこまで使わないからapiは一つしか設定していない。（youtube ver.2とyoutubeチャンネル情報は12個のapiを設定できるようにしている。）<br>
+日本の人気動画:150個急上昇順に表示している。<br>
+人気動画:全世界の急上昇動画150個<br>
+<br>
 <br>
 chromebook質問:chromebookについての質問。<br>
 chromebook回答:chromebook質問の回答。<br>
@@ -127,6 +135,6 @@ dino:chrome://dino。<br>
 作者:パスワードがある。<br>
 このサイトについて:Homeの説明。<br>
 ボタン開閉:ボタンを表示したり非表示にしたるする。<br>
-ゲーム・話す:ゲーム集と話すに行けるウェブサイトに行けるボタンを表示する。
+ゲーム・話す:ゲーム集と話すに行けるウェブサイトに行けるボタンを表示する。<br>
 </body>
 </html>
